Final comment on simulation

--- a/STAT331_Final_Project-datadescription.qmd
+++ b/STAT331_Final_Project-datadescription.qmd
@@ -316,6 +316,7 @@ ggplot(combined_data, aes(x = log_mean_emissions, y = mortality_value)) +
   scale_color_manual(values = c("Observed" = "blue", "Simulated" = "red"))
 ```
 
+Proceeding with the simulation analysis, the simulation process was repeated 1000 times to generate a large sample of similar datasets, enabling the comparison of the actual R-squared value derived from the original dataset to the mean R-squared value from the iterated simulations. The histogram below represents the distribution of R-squared values from the simulated datasets, and the mean of these values centers right around 0.35, closely aligning with the original R-squared value of `r round(glance(means_data_lm)$r.squared, 3)`. This close correspondence suggests that the original dataset was indeed appropriately modeled by the linear regression conducted in this report.
 
 
 ```{r}
